[package]
name = "ekoh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fonterator = { version = "0.9.0", features = ["monospace-font"] }
footile = "0.7.0"
pix = "0.13.2"
png_pong = "0.8.2"
termcolor = "1.2.0"
